--- a/mantra-ui/src/App.css
+++ b/mantra-ui/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+body {
+  margin: 20px;
+  background-color: #2c1125;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-container {
+  grid-template-columns: 1fr;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 600px) {
+  .app-container {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    gap: 20px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.categories {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
+  gap: 20px;
+}
+
+.category {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid #973f82;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #e6bbe1;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-mantra-form,
+.random {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
+
+.add-mantra-form textarea,
+.add-mantra-form input {
+  border-radius: 5px;
+  border: 1px solid #973f82;
+  background-color: #e6bbe1;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.add-mantra-form button,
+.random-btn {
+  border-radius: 5px;
+  background-color: #6a315c;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  color: #e6bbe1;
+}
+
+.add-mantra-form button:hover,
+.random-btn:hover {
+  background-color: #973f82;
+  cursor: pointer;
+}
+
