--- a/mantra-ui/src/App.css
+++ b/mantra-ui/src/App.css
@@ -23,8 +23,14 @@ body {
   gap: 20px;
 }
 
+.mantras-for-cat,
+.back-btn-div  {
+  grid-auto-rows: minmax(100px, auto);
+}
+
 .category,
-.mantra-item {
+.mantra-item,
+.cat-mantra-item {
   display: flex;
   flex-direction: column;
   border: 1px solid #973f82;
@@ -33,6 +39,22 @@ body {
   background-color: #e6bbe1;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+  word-wrap: break-word;
+}
+
+.cat-mantra-item {
+  text-align: center;
+}
+
+.cat-mantra-item:hover {
+background-color:#995a8a;
+}
+
+.cat-name h2 {
+  color: #e6bbe1;
+  padding: 10px;
+  text-align: left;
+  font-size: 24px;
 }
 
 h2 {
@@ -70,7 +92,7 @@ h2 {
 
 .add-mantra-form button:hover,
 .random-btn:hover,
-.back-btn {
+.back-btn:hover {
   background-color: #973f82;
   cursor: pointer;
 }
