--- a/mantra-ui/src/App.css
+++ b/mantra-ui/src/App.css
@@ -10,7 +10,7 @@ body {
 @media (min-width: 600px) {
   .app-container {
     display: grid;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 300px 1fr;
     gap: 20px;
   }
 }
@@ -19,8 +19,18 @@ body {
 .mantras-for-cat {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(250px, auto);
+  
+  text-align:center;
+  font-size: 24px;
   gap: 20px;
+}
+
+.categories {
+  grid-auto-rows: minmax(250px, 250px);
+}
+
+.mantras-for-cat {
+  grid-auto-rows: minmax(250px, auto);
 }
 
 .mantras-for-cat,
@@ -34,7 +44,7 @@ body {
   display: flex;
   flex-direction: column;
   border: 1px solid #973f82;
-  padding: 10px;
+  padding: 30px;
   border-radius: 5px;
   background-color: #e6bbe1;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -46,6 +56,7 @@ body {
   text-align: center;
 }
 
+.category:hover,
 .cat-mantra-item:hover {
 background-color:#995a8a;
 }
